tests/rosetta/out/Fortran/copy-stdin-to-stdout-1.f90
! Generated by Mochi compiler v0.10.28 on 2006-01-02T15:04:05Z
program copy_stdin_to_stdout_1
  implicit none
    integer :: line
  do while (.true.)
    line = input()
    if ((line == '')) then
      exit
    end if
    print *, line
  end do
end program copy_stdin_to_stdout_1
